[gd_scene load_steps=9 format=3 uid="uid://bt3smdt44s7ia"]

[ext_resource type="Script" uid="uid://fjwv4h0cdl0i" path="res://scripts/bird_controller.gd" id="1_qo85j"]
[ext_resource type="Texture2D" uid="uid://cv27f5lufol36" path="res://sprites/redbird-downflap.png" id="2_abokc"]
[ext_resource type="Texture2D" uid="uid://dr874fe5kgerq" path="res://sprites/redbird-midflap.png" id="3_516r7"]
[ext_resource type="Texture2D" uid="uid://e3vgs7skivep" path="res://sprites/redbird-upflap.png" id="4_feapl"]
[ext_resource type="AudioStream" uid="uid://c54wfx8lkotqb" path="res://audio/jump.wav" id="5_516r7"]
[ext_resource type="AudioStream" uid="uid://bj6w42xy08mnc" path="res://audio/hit.wav" id="6_feapl"]

[sub_resource type="SpriteFrames" id="SpriteFrames_yr30m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_abokc")
}, {
"duration": 1.0,
"texture": ExtResource("3_516r7")
}, {
"duration": 1.0,
"texture": ExtResource("4_feapl")
}],
"loop": true,
"name": &"flop",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2o5yp"]
radius = 58.0
height = 176.0

[node name="Bird" type="CharacterBody2D"]
visibility_layer = 2
scale = Vector2(0.5, 0.5)
collision_mask = 2
script = ExtResource("1_qo85j")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_yr30m")
animation = &"flop"
frame_progress = 0.30856

[node name="hitbox" type="Area2D" parent="."]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_2o5yp")

[node name="jump_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_516r7")
volume_db = -10.0

[node name="hit_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_feapl")

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
